--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                             <li>You will need best style</li>
                           </ul>
                           <div class="signature">
-                            <h2>Jessica Rose <span>- CE0</span></h2>
+                            <h2>Mrs Nilupa Jayarathne <span>- Managing Director</span></h2>
                           </div>
                         </div>
                       </div>
