--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@ specially thanks for Adithya broh for the great service.”
                   <div class="footer-widget logo-widget">
                     <figure class="footer-logo">
                       <a href="index.html"
-                        ><img src="assets/images/footer-logo.png" alt=""
+                        ><img src="assets/images/footer-logo.png" style="width: 128px;" alt=""
                       /></a>
                     </figure>
                     <div class="text">
@@ -1334,7 +1334,7 @@ specially thanks for Adithya broh for the great service.”
                     </form>
                   </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-12 footer-column">
+                <div class="col-lg-4 col-md-6 col-sm-12 footer-column justify-text-center">
                   <div class="footer-widget links-widget">
                     <div class="widget-title">
                       <h5>Links</h5>
@@ -1350,7 +1350,7 @@ specially thanks for Adithya broh for the great service.”
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                   <div class="footer-widget contact-widget">
                     <div class="widget-title">
                       <h5>Contact</h5>
@@ -1442,7 +1442,7 @@ specially thanks for Adithya broh for the great service.”
                 <a href="index.html"><i class="fab fa-twitter"></i></a>
               </li>
               <li>
-                <a href="index.html"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/share/1Aee33fSt8/"><i class="fab fa-facebook-square"></i></a>
               </li>
               <li>
                 <a href="index.html"><i class="fab fa-pinterest-p"></i></a>
