--- a/index.html
+++ b/index.html
@@ -464,7 +464,10 @@
                             <li>You will need best style</li>
                           </ul>
                           <div class="signature">
-                            <h2>Mrs Nilupa Jayarathne <span>- Managing Director</span></h2>
+                            <h2>
+                              Mrs Nilupa Jayarathne
+                              <span>- Managing Director</span>
+                            </h2>
                           </div>
                         </div>
                       </div>
@@ -863,8 +866,6 @@
                       you look beautiful; she makes you feel beautiful,
                       confident, and completely at ease. s”
                     </h6>
-                   
-
                   </div>
                 </div>
                 <div class="slider-content">
@@ -901,9 +902,15 @@
                   </div>
                   <div class="testimonial-content">
                     <h6>
-                      “Salon ruby kegalle,
-Firstly thank you soo much your grate service. Your team was soo friendly and really talented. You gave me the exact look that i wanted on my wedding day. Its was neat and the setting was longlasting and i got many good compliments about my hair n makeup from everyone at my wedding. thank you soo much and highly recommend to anyone who wants to look handsome on the special occasions.
-specially thanks for Adithya broh for the great service.”
+                      “Salon ruby kegalle, Firstly thank you soo much your grate
+                      service. Your team was soo friendly and really talented.
+                      You gave me the exact look that i wanted on my wedding
+                      day. Its was neat and the setting was longlasting and i
+                      got many good compliments about my hair n makeup from
+                      everyone at my wedding. thank you soo much and highly
+                      recommend to anyone who wants to look handsome on the
+                      special occasions. specially thanks for Adithya broh for
+                      the great service.”
                     </h6>
                     <h4>- Suresh Sampath Eashwara</h4>
                   </div>
@@ -1311,7 +1318,10 @@ specially thanks for Adithya broh for the great service.”
                   <div class="footer-widget logo-widget">
                     <figure class="footer-logo">
                       <a href="index.html"
-                        ><img src="assets/images/footer-logo.png" style="width: 128px;" alt=""
+                        ><img
+                          src="assets/images/footer-logo.png"
+                          style="width: 128px"
+                          alt=""
                       /></a>
                     </figure>
                     <div class="text">
@@ -1334,13 +1344,15 @@ specially thanks for Adithya broh for the great service.”
                     </form>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 footer-column justify-text-center">
-                  <div class="footer-widget links-widget">
+                <div
+                  class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center "
+                >
+                  <div class="footer-widget links-widget text-center">
                     <div class="widget-title">
                       <h5>Links</h5>
                     </div>
                     <div class="widget-content">
-                      <ul class="links-list clearfix">
+                      <ul class="links-list list-unstyled">
                         <li><a href="index.html">About Us</a></li>
                         <li><a href="index.html">Book Online</a></li>
                         <li><a href="index.html">Meet Our Team</a></li>
@@ -1350,8 +1362,9 @@ specially thanks for Adithya broh for the great service.”
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
-                  <div class="footer-widget contact-widget">
+
+                <div class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center">
+                  <div class="footer-widget contact-widget ">
                     <div class="widget-title">
                       <h5>Contact</h5>
                     </div>
@@ -1442,7 +1455,9 @@ specially thanks for Adithya broh for the great service.”
                 <a href="index.html"><i class="fab fa-twitter"></i></a>
               </li>
               <li>
-                <a href="https://www.facebook.com/share/1Aee33fSt8/"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/share/1Aee33fSt8/"
+                  ><i class="fab fa-facebook-square"></i
+                ></a>
               </li>
               <li>
                 <a href="index.html"><i class="fab fa-pinterest-p"></i></a>
