--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
     <!-- featured-products end -->
 
     <!-- news-section -->
-    <section class="news-section">
+    <section class="news-section my-section-padding">
       <div class="auto-container">
         <div class="sec-title brown">
           <span>Blog Posts</span>
@@ -991,13 +991,9 @@
     <!-- news-section end -->
 
     <!-- google-map-section -->
-    <section class="google-map-section">
+    <section class="google-map-section my-section-padding-none">
       <div class="map-column">
-        <div class="google-map" id="contact-google-map" data-map-lat="7.251309" data-map-lng="80.346815"
-          data-icon-path="assets/images/icons/map-marker.png"
-          data-map-title="192/A Main Street 71000 Kegalle, Sri Lanka" data-map-zoom="15" data-markers='{
-                "marker-1": [7.251309, 80.346815, "<h4>Our Office</h4><p>192/A Main Street, Kegalle, Sri Lanka</p>","assets/images/icons/map-marker.png"]
-            }'></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8898674225693!2d80.3487135!3d7.253373700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3170025f39be5%3A0x67a3078550da914c!2sSalon%20Ruby%20%26%20Nail%20Bar!5e0!3m2!1sen!2slk!4v1750248059455!5m2!1sen!2slk" height="450" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
@@ -1072,53 +1068,6 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
-                                <div class="footer-widget instagram-widget">
-                                    <div class="widget-title">
-                                        <h5>Instagram</h5>
-                                    </div>
-                                    <div class="widget-content">
-                                        <ul class="image-list clearfix">
-                                            <li>
-                                                <figure class="image-box">
-                                                    <img src="assets/images/resource/instagram-1.jpg" alt="">
-                                                    <a href="assets/images/resource/instagram-1.jpg" class="lightbox-image"><i class="flaticon-plus-1"></i></a>
-                                                </figure>
-                                            </li>
-                                            <li>
-                                                <figure class="image-box">
-                                                    <img src="assets/images/resource/instagram-2.jpg" alt="">
-                                                    <a href="assets/images/resource/instagram-2.jpg" class="lightbox-image"><i class="flaticon-plus-1"></i></a>
-                                                </figure>
-                                            </li>
-                                            <li>
-                                                <figure class="image-box">
-                                                    <img src="assets/images/resource/instagram-3.jpg" alt="">
-                                                    <a href="assets/images/resource/instagram-3.jpg" class="lightbox-image"><i class="flaticon-plus-1"></i></a>
-                                                </figure>
-                                            </li>
-                                            <li>
-                                                <figure class="image-box">
-                                                    <img src="assets/images/resource/instagram-4.jpg" alt="">
-                                                    <a href="assets/images/resource/instagram-4.jpg" class="lightbox-image"><i class="flaticon-plus-1"></i></a>
-                                                </figure>
-                                            </li>
-                                            <li>
-                                                <figure class="image-box">
-                                                    <img src="assets/images/resource/instagram-5.jpg" alt="">
-                                                    <a href="assets/images/resource/instagram-5.jpg" class="lightbox-image"><i class="flaticon-plus-1"></i></a>
-                                                </figure>
-                                            </li>
-                                            <li>
-                                                <figure class="image-box">
-                                                    <img src="assets/images/resource/instagram-6.jpg" alt="">
-                                                    <a href="assets/images/resource/instagram-6.jpg" class="lightbox-image"><i class="flaticon-plus-1"></i></a>
-                                                </figure>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div> -->
             </div>
           </div>
         </div>
