--- a/index.html
+++ b/index.html
@@ -35,36 +35,6 @@
 
 <body>
   <div class="boxed_wrapper">
-
-
-    <!-- search-popup (unused) -->
-    <div id="search-popup" class="search-popup">
-      <div class="close-search"><i class="flaticon-close"></i></div>
-      <div class="popup-inner">
-        <div class="overlay-layer"></div>
-        <div class="search-form">
-          <form method="post" action="">
-            <div class="form-group">
-              <fieldset>
-                <input type="search" class="form-control" name="search-input" value="" placeholder="Search Here"
-                  required />
-                <input type="submit" value="Search Now!" class="theme-btn style-four" />
-              </fieldset>
-            </div>
-          </form>
-          <h3>Recent Search Keywords</h3>
-          <ul class="recent-searches">
-            <li><a href="#">Finance</a></li>
-            <li><a href="#">Idea</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Growth</a></li>
-            <li><a href="#">Plan</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- search-popup end -->
-
     <!-- main header -->
     <header class="main-header style-two">
       <!-- header-top -->
@@ -72,20 +42,17 @@
         <div class="auto-container">
           <div class="top-inner clearfix">
             <div class="text pull-left">
-              <p>
-                Special offers: 30% discount for our Golden Membership
-                Holders.
-              </p>
+              <p>Welcome to Salon Ruby</p>
             </div>
             <div class="location-box pull-right">
-              <p><i class="flaticon-map-marker"></i>Salon Location: Kegalle</p>
+              <p><i class="flaticon-map-marker"></i>Kegalle</p>
             </div>
           </div>
         </div>
       </div>
       <div class="auto-container">
         <!-- header-upper -->
-        <div class="header-upper">
+        <div class="header-upper md-only">
           <div class="upper-inner">
             <div class="mail-box info-box">
               <div class="inner">
@@ -95,7 +62,8 @@
               </div>
             </div>
             <figure class="logo-box">
-              <a href="index.html" style="padding: 10px 0px;"><img src="assets/images/logo.png" style="width: 200px" alt="" /></a>
+              <a href="index.html" style="padding: 10px 0px;"><img src="assets/images/logo.png" style="width: 200px"
+                  alt="" /></a>
             </figure>
             <div class="phone-box info-box">
               <div class="inner">
@@ -143,6 +111,9 @@
                 </div>
               </nav>
             </div>
+            <span style="padding: 10px 0px;" class="max-md-only">
+              <img src="assets/images/logo.png" style="width: 150px" alt="" />
+            </span>
             <div class="menu-right-content">
               <div class="cart-box">
                 <a href="#"><i class="flaticon-shopping-cart-1"></i><span>0</span></a>
@@ -161,12 +132,12 @@
                 <!--Keep This Empty / Menu will come through Javascript-->
               </nav>
               <div class="menu-right-content clearfix pull-right">
-                <div class="search-btn">
+                <div class="search-btn hidden">
                   <button type="button" class="search-toggler">
                     <i class="flaticon-loupe"></i>
                   </button>
                 </div>
-                <div class="cart-box">
+                <div class="cart-box" style="margin-top: 20px !important;">
                   <a href="#"><i class="flaticon-shopping-cart-1"></i><span>0</span></a>
                 </div>
               </div>
@@ -184,7 +155,7 @@
 
       <nav class="menu-box">
         <div class="nav-logo">
-          <a href="index.html"><img src="assets/images/logo.png" alt="logo" style="width: 200px;"/></a>
+          <a href="index.html"><img src="assets/images/logo.png" alt="logo" style="width: 200px;" /></a>
         </div>
         <div class="menu-outer">
           <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -192,7 +163,7 @@
         <div class="contact-info">
           <h4>Contact Info</h4>
           <ul>
-            <li>Kegalle</li>
+            <li>No:192/A, Main Street, Kegalle, Sri Lanka</li>
             <li><a href="tel:+94774417944">077 441 7944</a></li>
             <li><a href="mailto:inquiry@salonruby.lk">inquiry@salonruby.lk</a></li>
           </ul>
@@ -270,8 +241,7 @@
               <div class="icon-box"><i class="flaticon-scissors-2"></i></div>
               <h4><a href="#">Hair Cutting</a></h4>
               <p>
-                There are many of lorem ipsum available but the have in some
-                form.
+                Transform your look with precision cuts tailored to your face shape and lifestyle needs.
               </p>
             </div>
           </div>
@@ -280,8 +250,7 @@
               <div class="icon-box"><i class="flaticon-curler"></i></div>
               <h4><a href="#">Hair Styling</a></h4>
               <p>
-                There are many of lorem ipsum available but the have in some
-                form.
+                Create stunning styles for any occasion with our expert styling techniques and premium products.
               </p>
             </div>
           </div>
@@ -290,10 +259,9 @@
               <div class="icon-box">
                 <i class="flaticon-beauty-treatment"></i>
               </div>
-              <h4><a href="#">facials</a></h4>
+              <h4><a href="#">Facials</a></h4>
               <p>
-                There are many of lorem ipsum available but the have in some
-                form.
+                Rejuvenate your skin with our luxurious facial treatments designed to cleanse, nourish, and glow.
               </p>
             </div>
           </div>
@@ -304,8 +272,7 @@
               </div>
               <h4><a href="#">Hair Coloring</a></h4>
               <p>
-                There are many of lorem ipsum available but the have in some
-                form.
+                Express your personality with vibrant colors and expert techniques for natural or bold transformations.
               </p>
             </div>
           </div>
@@ -337,9 +304,8 @@
                 <div class="text">
                   <h2>WELCOME TO the best Salon_Ruby HAIR SALON</h2>
                   <p>
-                    Curaemil Etiam porttitor, lacus in luctus molestie, lacus
-                    in luctus molestie, libero justo ullamcorper nulla, sed
-                    lacinia erat metus Morbi vestibioas beauty products.
+                    It's our vision to enhance our clients' natural beauty from the inside out, and hoping to provide
+                    the best services for our clients.
                   </p>
                 </div>
                 <div class="inner-box">
@@ -354,7 +320,7 @@
                         </ul>
                         <div class="signature">
                           <h2>
-                            Mrs Nilupa Jayarathne
+                            Mrs. Nilupa Jayarathne
                             <span>- Managing Director</span>
                           </h2>
                         </div>
@@ -406,7 +372,7 @@
           </div>
           <div class="phone-box">
             <h6>Call for booking</h6>
-            <h3><a href="tel:6668880000">077 441 7944</a></h3>
+            <h3><a href="tel:+94774417944">077 441 7944</a></h3>
           </div>
         </div>
       </div>
@@ -504,7 +470,8 @@
     <!-- prices-section end -->
 
     <!-- counter-section -->
-    <section class="counter-section" style="background-image: url(assets/images/background/counter-bg.jpg)">
+    <section class="counter-section my-section-padding"
+      style="background-image: url(assets/images/background/counter-bg.jpg)">
       <div class="auto-container">
         <div class="row clearfix">
           <div class="col-lg-4 col-md-12 col-sm-12 text-column">
@@ -815,19 +782,16 @@
       <div class="auto-container">
         <div class="clients-carousel owl-carousel owl-theme owl-nav-none owl-dots-none">
           <figure class="clients-logo-box">
-            <a href="index.html"><img src="assets/images/clients/clients-logo-1.png" alt="" /></a>
+            <a href="index.html"><img src="assets/images/clients/client1.png" alt="" /></a>
           </figure>
           <figure class="clients-logo-box">
-            <a href="index.html"><img src="assets/images/clients/1" alt="" /></a>
+            <a href="index.html"><img src="assets/images/clients/client2.png" alt="" /></a>
           </figure>
           <figure class="clients-logo-box">
-            <a href="index.html"><img src="assets/images/clients/2" alt="" /></a>
+            <a href="index.html"><img src="assets/images/clients/client3.png" alt="" /></a>
           </figure>
           <figure class="clients-logo-box">
-            <a href="index.html"><img src="assets/images/clients/3" alt="" /></a>
-          </figure>
-          <figure class="clients-logo-box">
-            <a href="index.html"><img src="assets/images/clients/4" alt="" /></a>
+            <a href="index.html"><img src="assets/images/clients/client4.png" alt="" /></a>
           </figure>
         </div>
       </div>
@@ -835,7 +799,7 @@
     <!-- clients-section end -->
 
     <!-- featured-products -->
-    <section class="featured-products">
+    <section class="featured-products my-section-padding">
       <div class="map-layer" style="background-image: url(assets/images/shape/map-1.png)"></div>
       <div class="auto-container">
         <div class="row clearfix">
@@ -898,7 +862,7 @@
     <!-- featured-products end -->
 
     <!-- news-section -->
-    <section class="news-section my-section-padding">
+    <section class="news-section">
       <div class="auto-container">
         <div class="sec-title brown">
           <span>Blog Posts</span>
@@ -993,7 +957,10 @@
     <!-- google-map-section -->
     <section class="google-map-section my-section-padding-none">
       <div class="map-column">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8898674225693!2d80.3487135!3d7.253373700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3170025f39be5%3A0x67a3078550da914c!2sSalon%20Ruby%20%26%20Nail%20Bar!5e0!3m2!1sen!2slk!4v1750248059455!5m2!1sen!2slk" height="450" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8898674225693!2d80.3487135!3d7.253373700000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3170025f39be5%3A0x67a3078550da914c!2sSalon%20Ruby%20%26%20Nail%20Bar!5e0!3m2!1sen!2slk!4v1750248059455!5m2!1sen!2slk"
+          height="450" style="border:0; width: 100%;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
@@ -1001,7 +968,7 @@
 
     <!-- main-footer -->
     <footer class="main-footer">
-      <div class="footer-top">
+      <div class="footer-top my-section-padding">
         <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-6.png)"></div>
         <div class="auto-container">
           <div class="widget-section">
@@ -1013,9 +980,8 @@
                   </figure>
                   <div class="text">
                     <p>
-                      There are many variations of passages of lorem ipsum
-                      available, but the majority have suffered alteration in
-                      some form.
+                      It's our vision to enhance our clients' natural beauty from the inside out, and hoping to provide
+                      the best services for our clients.
                     </p>
                   </div>
                   <form action="#" method="post" class="subscribe-form">
@@ -1072,7 +1038,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-botton">
+      <div class="footer-botton my-section-padding">
         <div class="auto-container clearfix">
           <div class="copyright pull-left">
             <p>
@@ -1105,8 +1071,9 @@
     <!--Messenger and WhatsApp Floating btns-->
     <a href="https://m.me/94774417944" class="float" style="z-index: 999999;">
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-messenger my-float" viewBox="0 0 16 16">
-  <path d="M0 7.76C0 3.301 3.493 0 8 0s8 3.301 8 7.76-3.493 7.76-8 7.76c-.81 0-1.586-.107-2.316-.307a.64.64 0 0 0-.427.03l-1.588.702a.64.64 0 0 1-.898-.566l-.044-1.423a.64.64 0 0 0-.215-.456C.956 12.108 0 10.092 0 7.76m5.546-1.459-2.35 3.728c-.225.358.214.761.551.506l2.525-1.916a.48.48 0 0 1 .578-.002l1.869 1.402a1.2 1.2 0 0 0 1.735-.32l2.35-3.728c.226-.358-.214-.761-.551-.506L9.728 7.381a.48.48 0 0 1-.578.002L7.281 5.98a1.2 1.2 0 0 0-1.735.32z"/>
-</svg>
+        <path
+          d="M0 7.76C0 3.301 3.493 0 8 0s8 3.301 8 7.76-3.493 7.76-8 7.76c-.81 0-1.586-.107-2.316-.307a.64.64 0 0 0-.427.03l-1.588.702a.64.64 0 0 1-.898-.566l-.044-1.423a.64.64 0 0 0-.215-.456C.956 12.108 0 10.092 0 7.76m5.546-1.459-2.35 3.728c-.225.358.214.761.551.506l2.525-1.916a.48.48 0 0 1 .578-.002l1.869 1.402a1.2 1.2 0 0 0 1.735-.32l2.35-3.728c.226-.358-.214-.761-.551-.506L9.728 7.381a.48.48 0 0 1-.578.002L7.281 5.98a1.2 1.2 0 0 0-1.735.32z" />
+      </svg>
     </a>
     <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
     <script>
