--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
     <section class="about-style-two">
       <div class="pattern-layer">
         <div class="pattern-1" style="background-image: url(assets/images/shape/shape-7.png)"></div>
-        <div class="pattern-2"></div>
-        <div class="pattern-3" style="background-image: url(assets/images/shape/shape-8.png)"></div>
+        <!--<div class="pattern-2"></div>-->
+        <div class="pattern-3" style="background-image: url(assets/images/shape/shape-3.png)"></div>
       </div>
       <div class="auto-container">
         <div class="row clearfix">
@@ -684,7 +684,7 @@
             </div>
           </div>
         </div>
-        <div class="image-column">
+        <div class="image-column xl-only">
           <div class="image-box clearfix">
             <figure class="image">
               <a href="assets/images/resource/style-1.jpg" class="lightbox-image"><img
@@ -886,7 +886,7 @@
                     </li>
                   </ul>
                   <h3>
-                    <a href="index.html">The famous brand hair color roducts</a>
+                    <a href="index.html" class="line-clamp-2">The famous brand hair color roducts</a>
                   </h3>
                   <div class="link-btn">
                     <a href="index.html">Read More</a>
@@ -913,7 +913,7 @@
                     </li>
                   </ul>
                   <h3>
-                    <a href="index.html">Best Trending hair styles by Our salon</a>
+                    <a href="index.html" class="line-clamp-2">Best Trending hair styles by Our salon</a>
                   </h3>
                   <div class="link-btn">
                     <a href="index.html">Read More</a>
@@ -940,7 +940,7 @@
                     </li>
                   </ul>
                   <h3>
-                    <a href="index.html">The right place for your Hairs & Beards</a>
+                    <a href="index.html" class="line-clamp-2">The right place for your Hairs & Beards</a>
                   </h3>
                   <div class="link-btn">
                     <a href="index.html">Read More</a>
