--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
     <!-- main-footer -->
     <footer class="main-footer">
       <div class="footer-top my-section-padding">
-        <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-6.png)"></div>
+        <div class="pattern-layer"></div>
         <div class="auto-container">
           <div class="widget-section">
             <div class="row clearfix">
@@ -993,7 +993,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center ">
-                <div class="footer-widget links-widget text-center">
+                <div class="footer-widget links-widget md-text-center w-100">
                   <div class="widget-title">
                     <h5>Links</h5>
                   </div>
@@ -1010,7 +1010,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center">
-                <div class="footer-widget contact-widget ">
+                <div class="footer-widget contact-widget w-100">
                   <div class="widget-title">
                     <h5>Contact</h5>
                   </div>
