--- a/portfolio.html
+++ b/portfolio.html
@@ -371,7 +371,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center ">
-                                <div class="footer-widget links-widget text-center">
+                                <div class="footer-widget links-widget md-text-center w-100">
                                     <div class="widget-title">
                                         <h5>Links</h5>
                                     </div>
@@ -388,7 +388,7 @@
                             </div>
 
                             <div class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center">
-                                <div class="footer-widget contact-widget ">
+                                <div class="footer-widget contact-widget w-100">
                                     <div class="widget-title">
                                         <h5>Contact</h5>
                                     </div>
