--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@
             style="background-image: url(assets/images/background/page-title.jpg);">
             <div class="auto-container">
                 <div class="title-box">
-                    <span class="title-text">Our Photos</span>
+                    <span class="title-text">Nilupa Jayarathne</span>
                     <h1>Portfolio</h1>
                 </div>
             </div>
