--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
   <link href="assets/css/color.css" rel="stylesheet" />
   <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/css/responsive.css" rel="stylesheet" />
+
+  <style>
+    figure.image {
+      height: 50%;
+    }
+
+    .lightbox-image img {
+      height: 100% !important;
+      aspect-ratio: 1/1;
+      object-fit: cover;
+    }
+  </style>
 </head>
 
 <!-- page wrapper -->
@@ -97,7 +109,7 @@
                       <a href="index.html">Home</a>
                     </li>
                     <li class="">
-                      <a href="index.html">About Us</a>
+                      <a href="about.html">About Us</a>
                     </li>
                     <li class="">
                       <a href="index.html">Services</a>
@@ -629,15 +641,17 @@
                 </div>
                 <div class="testimonial-content">
                   <h6>
-                    “HUMA is truly one of a kind. From the moment she began
-                    working on me — doing my nails, makeup, hair, and finally
-                    dressing me in a beautiful Kandyan saree — I could feel
-                    the care and precision in everything she did. Her hands
-                    are so skillful, but what really stands out is the calm,
-                    graceful energy she brings with her. She doesn’t just make
-                    you look beautiful; she makes you feel beautiful,
-                    confident, and completely at ease. s”
+                    “HUMA is truly one of a kind. From the moment she began working on me — doing my nails, makeup,
+                    hair, and finally dressing me in a
+                    beautiful Kandyan saree — I could feel the care and precision in everything she did. Her hands are
+                    so skillful, but what really stands out is the
+                    calm, graceful energy she brings with her. She doesn’t just make you look beautiful; she makes you
+                    feel beautiful, confident, and completely at
+                    ease. There’s something special about her presence — warm, gentle, and full of heart. I’m genuinely
+                    grateful for the experience and for the way
+                    she made that moment feel so effortless and memorable.”
                   </h6>
+                  <h4>- Rangana Dissanayake Silva</h4>
                 </div>
               </div>
               <div class="slider-content">
@@ -684,18 +698,18 @@
             </div>
           </div>
         </div>
-        <div class="image-column xl-only">
-          <div class="image-box clearfix">
+        <div class="image-column xl-only h-100">
+          <div class="image-box clearfix h-100">
             <figure class="image">
-              <a href="assets/images/resource/style-1.jpg" class="lightbox-image"><img
+              <a href="assets/images/resource/testimonial-1.jpg" class="lightbox-image"><img
                   src="assets/images/resource/testimonial-1.jpg" alt="" /></a>
             </figure>
             <figure class="image">
-              <a href="assets/images/resource/style-2.jpg" class="lightbox-image"><img
+              <a href="assets/images/resource/testimonial-2.jpg" class="lightbox-image"><img
                   src="assets/images/resource/testimonial-2.jpg" alt="" /></a>
             </figure>
             <figure class="image">
-              <a href="assets/images/resource/style-3.jpg" class="lightbox-image"><img
+              <a href="assets/images/resource/testimonial-3.jpg" class="lightbox-image"><img
                   src="assets/images/resource/testimonial-3.jpg" alt="" /></a>
             </figure>
             <figure class="image">
@@ -999,7 +1013,7 @@
                   </div>
                   <div class="widget-content">
                     <ul class="links-list list-unstyled">
-                      <li><a href="index.html">About Us</a></li>
+                      <li><a href="about.html">About Us</a></li>
                       <li><a href="index.html">Book Online</a></li>
                       <li><a href="index.html">Meet Our Team</a></li>
                       <li><a href="index.html">Certifications</a></li>
