--- a/other pages/about-element-1.html
+++ b/other pages/about-element-1.html
@@ -409,7 +409,7 @@
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links-list clearfix">
-                                            <li><a href="index.html">About Us</a></li>
+                                            <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Book Online</a></li>
                                             <li><a href="index.html">Meet Our Team</a></li>
                                             <li><a href="index.html">Certifications</a></li>
