--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
                                             <a href="index.html">Home</a>
                                         </li>
                                         <li class="">
-                                            <a href="index.html">About Us</a>
+                                            <a href="about.html">About Us</a>
                                         </li>
                                         <li class="">
                                             <a href="index.html">Services</a>
@@ -345,7 +345,7 @@
         <!-- main-footer -->
         <footer class="main-footer">
             <div class="footer-top my-section-padding">
-                <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-6.png)"></div>
+                <div class="pattern-layer"></div>
                 <div class="auto-container">
                     <div class="widget-section">
                         <div class="row clearfix">
@@ -377,7 +377,7 @@
                                     </div>
                                     <div class="widget-content">
                                         <ul class="links-list list-unstyled">
-                                            <li><a href="index.html">About Us</a></li>
+                                            <li><a href="about.html">About Us</a></li>
                                             <li><a href="index.html">Book Online</a></li>
                                             <li><a href="index.html">Meet Our Team</a></li>
                                             <li><a href="index.html">Certifications</a></li>
