--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                       <a href="about.html">About Us</a>
                     </li>
                     <li class="">
-                      <a href="index.html">Services</a>
+                      <a href="service.html">Services</a>
                     </li>
 
                     <li class="">
