--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                                             <a href="about.html">About Us</a>
                                         </li>
                                         <li class="">
-                                            <a href="index.html">Services</a>
+                                            <a href="service.html">Services</a>
                                         </li>
 
                                         <li class="">
