--- a/other pages/index-2.html
+++ b/other pages/index-2.html
@@ -169,7 +169,7 @@
                                                 <li><a href="error.html">404</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="index.html">Services</a>
+                                        <li class="dropdown"><a href="service.html">Services</a>
                                             <ul>
                                                 <li><a href="service.html">Our Services</a></li>
                                                 <li><a href="service-details.html">Hair Cuttings</a></li>
