--- a/other pages/service-details-6.html
+++ b/other pages/service-details-6.html
@@ -168,7 +168,7 @@
                                                 <li><a href="error.html">404</a></li>
                                             </ul>
                                         </li>
-                                        <li class="current dropdown"><a href="index.html">Services</a>
+                                        <li class="current dropdown"><a href="service.html">Services</a>
                                             <ul>
                                                 <li><a href="service.html">Our Services</a></li>
                                                 <li><a href="service-details.html">Hair Cuttings</a></li>
