--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
                                             <a href="about.html">About Us</a>
                                         </li>
                                         <li class="">
-                                            <a href="index.html">Services</a>
+                                            <a href="service.html">Services</a>
                                         </li>
 
                                         <li class="current">
