--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                                         <li class="">
                                             <a href="portfolio.html">Portfolio</a>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="contact.html">Contact</a></li><li><a href="booking.html">Book Now</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -656,7 +656,5 @@
     <script src="assets/js/script.js"></script>
 
 </body><!-- End of .page_wrapper -->
-
-<!-- Mirrored from azim.commonsupport.com/Mremot/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 18 Jun 2025 08:40:23 GMT -->
 
 </html>
