--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <li class="">
                       <a href="portfolio.html">Portfolio</a>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li><li><a href="booking.html">Book Now</a></li>
                   </ul>
                 </div>
               </nav>
