--- a/contact.html
+++ b/contact.html
@@ -114,6 +114,7 @@
                                             <a href="portfolio.html">Portfolio</a>
                                         </li>
                                         <li class="current"><a href="contact.html">Contact</a></li>
+                                        <li class=""><a href="booking.html">Book Now</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -443,7 +444,5 @@
     <script src="assets/js/script.js"></script>
 
 </body><!-- End of .page_wrapper -->
-
-<!-- Mirrored from azim.commonsupport.com/Mremot/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 18 Jun 2025 08:40:36 GMT -->
 
 </html>
