--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       aspect-ratio: 1/1;
       object-fit: cover;
     }
+    .testimonial-content h4, .testimonial-content h6{
+      color: #fff;
+    }
   </style>
 </head>
 
@@ -570,9 +573,9 @@
       <div class="outer-container clearfix">
         <div class="testimonial-column">
           <div class="testimonial-inner">
-            <div class="sec-title light">
+            <div class="sec-title dark">
               <span>Testimonials</span>
-              <h2>What they say</h2>
+              <!--<h2>What they say</h2>-->
             </div>
             <div class="bxslider">
               <div class="slider-content">
